<resources>
  <string name="app_name">Vungle AdMob Adapter QA Test</string>

  <string name="action_about">About</string>
  <string name="action_settings">Settings</string>
  <string name="label_about">About</string>
  <string name="label_ok">OK</string>
  <string name="google_app_id">com.google.android.vungle</string>
  <string name="ad_rewarded">Rewarded Video Ad</string>
  <string name="placements">Placements:</string>
  <string name="ad_interstitial">Interstitial Ad</string>
  <string name="ad_load">Load Ad</string>
  <string name="ad_loading">Loading…</string>
  <string name="ad_show">Show</string>
  <string name="ad_shown">Ad shown</string>
  <string name="ad_failed">Fail to Load Ad</string>
  <string name="ad_options">Options</string>
  <string name="ad_log">Log</string>
  <string name="format_about">App version: %1$s\nAdapter version: %2$s\nVungle SDK version: %3$s\nGoogle Play services: %4$s</string>
  <string name="title_activity_options">Options</string>
  <string name="pref_title_user_id">User ID</string>
  <string name="pref_default_user_id">userId</string>
  <string name="placements_error">Please specify at least one placement</string>
  <string name="ask_placement">Please choose placement for load</string>
  <string name="add_ad_unit">Add ad unit</string>
  <string name="ad_unit_id">Ad unit id</string>
  <string name="placement_unit_id">Placement id</string>
  <string name="log">Log:</string>
  <string name="load_ad">Load Ad</string>
  <string name="play_ad">Play Ad</string>
  <string name="remove">Remove</string>
  <string name="interstitial">Interstitial</string>
  <string name="rewardedAd">Rewarded</string>
  <string name="rewardedAd_interstitial">RewardedInterstitial</string>
  <string name="enter_unit_id">Enter unit ID</string>
  <string name="enter_placement_id">Placement ID</string>
  <string name="cancel">Cancel</string>
  <string name="add">Add</string>
  <string name="unit_id_placeholder" />
  <string name="update_consent">update GDPR</string>
  <string name="banner">Banner</string>
  <string name="mrec">MREC</string>
  <string name="show_banners">Show Ad</string>
  <string name="reset_units">Reset Units</string>
  <string name="pref_title_android_id_opted_out">Opt out sending Android id</string>
  <string name="pref_title_ad_orientation">AdOrientation</string>
  <string name="started">AdStart</string>
  <string name="new_banner_ad">new banner ad</string>
  <string name="refresh_new_banner_ad">refresh new banner ad</string>
  <string name="error">AdError</string>
  <string name="banner_click">BannerClicked</string>
  <string name="test_suite">AdMob Test Suite</string>
  <string name="action_multiple_native_ad">Native Ad in Feed</string>
  <string name="action_multiple_native_ad_advanced">Native Ad Advanced in Feed </string>
  <string name="action_multiple_banner_ad">Banner Ad in Feed</string>
  <string name="privacy_settings">Privacy Settings</string>
  <string name="action_update_ccpa">Update CCPA</string>
  <string name="save">Save</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="native_type">Native</string>
  <string name="google_gdpr_label">Google Gdpr</string>
  <string name="google_gdpr_prompt">Prompt</string>
  <string name="google_gpdr_reset">Reset</string>

  <string name="load_error">Load error</string>
  <string name="ad_closed">onAdClosed</string>
  <string name="ad_opened">onAdOpened</string>
  <string name="ad_loaded">onAdLoaded</string>
  <string name="ad_clicked">onAdClicked</string>
  <string name="ad_impression">onAdImpression</string>

  <string name="pref_key_options_position">pref_key_options_position</string>
  <string name="pref_title_ad_options_position">Ad Options Position</string>

  <string name="ad_unitId_title">UnitId: %s \n is OpenBidding Unit: %s</string>
  <string name="action_update_coppa">Update COPPA</string>
  <string name="action_update_coppa_admob">Update COPPA (Admob)</string>

  <string name="more_coins_text" translatable="false">Watch an ad for %d more %s.</string>
  <string name="negative_button_text" translatable="false">No, thanks</string>
  <string name="video_starting_in_text" translatable="false">Video starting in %d…</string>

</resources>
