<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_gdpr" android:title="@string/update_consent"
      android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_ccpa" android:title="@string/action_update_ccpa"
      android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_multiple_native_ad" android:title="@string/action_multiple_native_ad"
      android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_multiple_native_ad_advanced" android:title="@string/action_multiple_native_ad_advanced"
      android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_multiple_banner_ad" android:title="@string/action_multiple_banner_ad"
      android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_test" android:title="@string/test_suite"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/google_gdpr_prompt" android:title="Google Gdpr Prompt"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/google_gdpr_reset" android:title="Google Gdpr Reset"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
