<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/itemRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/adSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <EditText
          android:id="@+id/itemId"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:enabled="false"
          android:hint="@string/ad_unit_id"
          android:lines="1"
          android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/launchBannerScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_banners"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/removeUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/remove"
                android:textAllCaps="false" />

        </RelativeLayout>


    </LinearLayout>
</FrameLayout>